# zysk

./: .gitignore  README.md  dev.sh  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json  zysk.code-workspace
apps/agentic/: package.json
apps/agentic/src/: worker.ts
apps/agentic/src/llm/core/: base.ts  exceptions.ts
apps/agentic/src/llm/models/: azure-openai-models.ts  callbacks.ts  deepseek-models.ts  google-models.ts  meta-models.ts  registry.ts  runners.ts
apps/agentic/src/llm/runners/: experimenter.ts  insights-extractor.ts  news-based-sentiment-predictor.ts  sentiment-predictor.ts
apps/agentic/src/utils/: datetime.ts  redis.ts
apps/agentic/src/workflows/: activities.ts  scraper-workflows.ts  scrapper-workflows.ts  workflows.ts
apps/agentic/src/workflows/crawler/: activities.ts  workflows.ts
apps/cube/: .env  .eslintrc.js  index.ts  package.json  tsconfig.cube.json  tsconfig.json
apps/cube/model/cubes/: current_quotes.js  quote.js  quotes.js  rl_quote.js  ticker_time_series.js  user.js  user_tickers.js  users.js
apps/cube/model/shared/: constants.js
apps/cube/shared/: constants.ts  metrics.ts  types.ts  utils.ts
apps/scraper-js/: package.json
apps/scraper-js/src/: index.ts  queue.ts
apps/scraper-py/: .env.example  .gitignore  Dockerfile  README.md  k8s_gke.sh  k8s_local.sh  pyproject.toml  requirements.txt  run.py
apps/scraper-py/k8s/base/: api-deployment.yaml  api-service.yaml  keda-celery-autoscaler.yaml  kustomization.yaml  redis-statefulset.yaml  worker-deployment.yaml
apps/scraper-py/k8s/base/keda/: scaledobject-worker.yaml
apps/scraper-py/k8s/overlays/gke/: keda-patch.yaml  kustomization.yaml
apps/scraper-py/k8s/overlays/local/: imagepullpolicy-patch.yaml  kustomization.yaml  patch-worker-redis-env.yaml
apps/scraper-py/src/: activities.py  app.py  celery_tasks.py  celery_worker.py  db_setup.py  errors.py  exceptions.py  fastapi_app.py  links.py  models.py  registry.py  routes_db_logic.py  scrape_helpers.py  scrape_news.py  scrapers.py  settings.py  sitemap.py  sitemap_parser_utils.py  task_executor.py  task_helper.py  temporal_client.py  temporal_worker.py  utils.py  validation.py  workflows.py
apps/scraper-py/src/browsers/: __init__.py  camoufox_browser.py  cdp_browser.py  cdp_session.py  get_session.py
apps/scraper-py/src/requests/: __main__.py  __version__.py  cffi.py  client.py  cookies.py  headers.py  request.py  response.py  session.py  tls_request.py  toolbelt.py
apps/scrapper/: .eslintrc.js  package.json  tsconfig.json
apps/scrapper-js/: package.json
apps/scrapper-js/src/: config.ts  index.ts  queue.ts
apps/scrapper-py/: .dockerignore  .gitignore  Dockerfile  README.md  k8s_gke.sh  k8s_local.sh  main.py  pyproject.toml  requirements.txt  run.py
apps/scrapper-py/backend/: scrapers.py
apps/scrapper-py/frontend/: package.json
apps/scrapper-py/frontend/src/components/InputComponent/: InputComponent.tsx
apps/scrapper-py/k8s/base/: api-deployment.yaml  autoscaler-service.yaml  keda-celery-autoscaler.yaml  kustomization.yaml  worker-deployment.yaml
apps/scrapper-py/k8s/base/keda/: scaledobject-celery-worker.yaml
apps/scrapper-py/k8s/overlays/gke/: keda-patch.yaml  service-patch.yaml
apps/scrapper-py/k8s/overlays/local/: imagepullpolicy-patch.yaml  kustomization.yaml  service-patch.yaml
apps/scrapper-py/src/: scrape_news.py  utils.py
apps/scrapper/src/: browser.tsx  config.ts  index.ts  queue.ts  server.ts
apps/temporal/: .env  .eslintrc.js  drizzle.config.ts  package.json  tsconfig.json
apps/temporal/src/: activities.ts  constants.ts  index.ts  worker.ts  workflows.ts
apps/temporal/src/agents/: base.ts  exceptions.ts  schemas.ts
apps/temporal/src/api/: alpha-vantage.ts  finnhub.ts
apps/temporal/src/config/: index.ts
apps/temporal/src/db/: index.ts
apps/temporal/src/services/: alpha-vantage.service.ts  experiment.service.ts  finnhub.service.ts  stock-api.service.ts  ticker-news.service.ts  ticket-info.service.ts  types.ts
apps/temporal/src/utils/: async-retrier.ts  async-retrying.ts  logger.ts  trimmer.ts
apps/temporal/src/workflows/: activities.ts  workflows.ts
apps/web/: .env.development  .eslintrc.js  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
apps/web/api/: admin.ts  metrics.ts  portfolio.ts  subscriptions.ts  watchlist.ts
apps/web/app/: layout.tsx
apps/web/app/admin/: admin-script-runner.tsx  layout.tsx  page.tsx
apps/web/app/common/: page-layout.tsx  react-query-provider.tsx
apps/web/app/home/: layout.tsx  page.tsx  portfolio-table.tsx  ticker-table.tsx  user-subscriptions.tsx  watchlist.tsx
apps/web/lib/db/: index.ts
apps/web/lib/formatters/: index.ts
apps/web/lib/logger/: default-logger.ts
apps/web/lib/time/: timezone.ts
apps/web/services/: index.ts  metrics.service.ts  portfolio.service.ts
apps/web/styles/: global.css
apps/web/styles/theme/: color-schemes.ts  colors.ts  create-theme.ts  types.d.ts  typography.ts
apps/web/ui/: app-sidebar.tsx  data-table.tsx  prediction-badge.tsx  prediction-card.tsx  sentiment-badge.tsx  ticker-state-card.tsx
apps/web/ui/ticker-card/: insights-list.tsx  ticker-sentiment-card.tsx
docker/postgres/: postgres-config.sh
(+121 files in other folders)
