[project]
name = "scrapper-py"
version = "0.1.0"
description = ""
authors = [
    {name = "alex",email = "alex.borodach@gmail.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "botasaurus-server (>=4.0.60,<5.0.0)",
    "capsolver-extension-python (>=1.0.3,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "botasaurus-driver (>=4.0.91,<5.0.0)",
    "markdownify (>=1.1.0,<2.0.0)",
    "botasaurus @ file:///Users/alex/Documents/projects/zysk/main/packages/botasaurus"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"

[tool.poetry.dependencies]
botasaurus = {develop = true}
